--- a/.github/workflows/update-token.yml
+++ b/.github/workflows/update-token.yml
@@ -16,21 +16,21 @@ jobs:
   update_token:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Install Node
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
+          node-version: 20
 
-      - run: pnpm i
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+          version: 8
+          run_install: true
+
       - run: pnpm start
 
       - run: echo `date +%s` > last-updated.txt
