--- a/.github/workflows/update-token.yml
+++ b/.github/workflows/update-token.yml
@@ -2,10 +2,11 @@ name: Update Token
 on:
   push:
     paths:
-      - '.github/workflows/update-token.yml'
-  
+      - ".github/workflows/update-token.yml"
+      - "src/index.ts"
+
   schedule:
-  - cron: "*/5 * * * *"
+    - cron: "*/5 * * * *"
 
   workflow_dispatch:
 
@@ -34,8 +35,8 @@ jobs:
       - run: pnpm start
 
       - run: echo `date +%s` > last-updated.txt
-          
-      - name: Push to GitHub 
+
+      - name: Push to GitHub
         run: |
           git config user.name lonelil
           git config user.email 51315646+lonelil@users.noreply.github.com
